<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:contentDescription="@string/menu_home"
            android:title="@string/home"/>
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_menu_history"
            android:contentDescription="@string/menu_history"
            android:title="@string/history"/>
        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/ic_menu_calendar"
            android:contentDescription="@string/menu_calendar"
            android:title="@string/calendar"/>
        <item
            android:id="@+id/nav_progress"
            android:icon="@drawable/ic_menu_progress"
            android:contentDescription="@string/menu_progress"
            android:title="@string/progress"/>
    </group>

    <item android:title="@string/tools">
        <menu>
            <item
                android:id="@+id/nav_timer"
                android:icon="@drawable/ic_menu_timer"
                android:contentDescription="@string/timer"
                android:title="@string/timer"/>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_settings"
                android:contentDescription="@string/menu_settings"
                android:title="@string/settings"/>
        </menu>
    </item>

</menu>
