<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mdtp_white">

    <TextView
        android:id="@+id/set_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set1"
        android:contentDescription="@string/set_number"
        android:layout_weight="1"/>

    <TextView
        android:id="@+id/weight"
        android:layout_width="wrap_content"
        android:maxLength="3"
        android:gravity="start"
        android:contentDescription="@string/weight"
        android:layout_height="wrap_content"
        android:layout_weight=".5"/>

    <TextView
        android:id="@+id/reps"
        android:layout_width="wrap_content"
        android:maxLength="2"
        android:gravity="center"
        android:contentDescription="@string/reps"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>
</LinearLayout>