<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/main_layout"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/blue_grey_700"
              android:orientation="vertical"
              android:weightSum="5"
              tools:context=".MainActivity">


<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:gravity="center_horizontal"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/google_icon"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="@dimen/g_top_margin"
            android:contentDescription="@string/desc_google_icon"
            android:src="@drawable/googleg_color"/>

        <TextView
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/title_text"
            android:gravity="center"
            android:textColor="@android:color/secondary_text_light"
            android:contentDescription="@string/strength_tracker"
            android:textSize="36sp"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/profile_pic"
            android:contentDescription="@string/profile_picture"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signed_out"
            android:contentDescription="@string/signed_out"
            android:textColor="@android:color/black"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/emailAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/email_address"
            android:text="@string/email"
            android:textColor="@android:color/black"
            android:textSize="14sp"/>


        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/sign_in_button"
            android:visibility="visible"
            tools:visibility="gone"
            android:clickable="false"/>

    </LinearLayout>


    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#F5F5F5">


        <LinearLayout
            android:id="@+id/sign_out_and_disconnect"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:visibility="gone"
            tools:visibility="visible">


            <Button
                android:id="@+id/sign_out_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/sign_out"
                android:text="@string/sign_out"
                android:theme="@style/ThemeOverlay.MyDarkButton"/>


        </LinearLayout>

    </RelativeLayout>

</LinearLayout>
