<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#FFFFFF"
              android:orientation="horizontal">

    <ImageView
        android:id="@+id/imageView"
        android:contentDescription="@string/title_text"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:src="@mipmap/ic_launcher"
        android:contextClickable="true"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#FFFFFF">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/widget"
            android:contentDescription="@string/days_since_last_workout"
            android:textSize="15sp"
            android:textStyle="bold"
            android:background="#FFFFFF"
            android:textColor="@color/common_plus_signin_btn_text_light"/>


        <TextView
            android:id="@+id/textViewWidget"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/days"
            android:layout_gravity="center"
            android:text="000"
            android:textSize="18sp"
            android:textColor="@color/common_plus_signin_btn_text_light"
            android:textStyle="bold"/>

        <ImageButton
            android:id="@+id/actionButton"
            android:layout_gravity="center"
            android:layout_width="160dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/refresh"
            android:layout_weight="1"
            android:src="@drawable/ic_autorenew_black_24dp"/>

    </LinearLayout>


</LinearLayout>
