<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/new_set_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/set_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/set"
        android:contentDescription="@string/set"
        android:layout_weight="1"/>

    <EditText
        android:id="@+id/weight"
        android:layout_width="0dp"
        android:maxLength="3"
        android:gravity="center"
        android:contentDescription="@string/weight"
        android:inputType="phone"
        android:digits="1234567890"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>

    <EditText
        android:id="@+id/reps"
        android:layout_width="0dp"
        android:maxLength="2"
        android:gravity="center"
        android:contentDescription="@string/reps"
        android:inputType="phone"
        android:digits="1234567890"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>

</LinearLayout>