<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingLeft="16dp"
              android:paddingRight="16dp"
              android:paddingTop="16dp"
              android:orientation="vertical"
              android:paddingBottom="16dp"
              android:background="@color/background"
              tools:context=".EditorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/linear"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:background="@color/icons"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:elevation="2dp">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/datePicker"
            android:hint="@string/date"
            android:background="@android:color/transparent"
            android:focusable="false"
            android:padding="10dp"
            android:onClick="onSelectDate"/>

    </LinearLayout>

    <include layout="@layout/spacer"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:background="@color/icons"
        android:paddingTop="16dp"
        android:elevation="2dp">


        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinner"
            android:hint="@string/enter_note_here"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/weight"
                android:contentDescription="@string/weight"
                android:layout_weight="1"
                android:textAlignment="center"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/reps"
                android:contentDescription="@string/reps"
                android:layout_weight="1"
                android:textAlignment="center"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/parentView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:orientation="vertical">



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_add_24dp"
                android:id="@+id/addSet"
                android:contentDescription="@string/add_set"
                android:onClick="addSet"/>

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_remove_24dp"
                android:id="@+id/removeSet"
                android:contentDescription="@string/remove_set"
                android:onClick="removeSet"/>


        </LinearLayout>


    </LinearLayout>


</LinearLayout>
