<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="@dimen/nav_header_height"
                xmlns:tools="http://schemas.android.com/tools"
                android:background="@android:color/white"
                android:gravity="bottom"
                android:orientation="vertical">


    <RelativeLayout
        android:id="@+id/navigationHeader"
        android:layout_width="match_parent"
        android:layout_height="168dp"
        android:background="@drawable/wallpaper2"
        android:paddingTop="24dp"
        android:onClick="click_screen"
        android:clickable="true">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imgAvatar"
            android:src="@drawable/ic_account_circle_24dp"
            android:contentDescription="@string/profile_picture"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:background="@drawable/circle"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"/>


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="56dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/imgAvatar"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:contentDescription="@string/user_name"
                android:visibility="visible"
                tools:visibility="gone"
                android:id="@+id/user_name"
                android:textColor="#FFFFFF"/>

            <TextView
                android:id="@+id/txtUserEmail"
                android:contentDescription="@string/user_email"
                android:text="@string/nav_header_status"
                android:layout_width="wrap_content"
                android:alpha=".7"
                android:layout_height="28dp"
                android:fontFamily="sans-serif"
                android:textColor="#FFFFFF"
                android:textSize="14sp"/>


        </LinearLayout>

        <TextView
            android:id="@+id/status"
            android:text="@string/tap_to_login"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:fontFamily="sans-serif-medium"
            android:textColor="#FFFFFF"
            android:alpha=".5"
            android:layout_toRightOf="@id/imgAvatar"
            android:layout_toEndOf="@id/imgAvatar"
            android:textSize="11sp"
            android:textStyle="bold"/>


    </RelativeLayout>

</RelativeLayout>
